# dep-doctor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  action.yml  problems.feed.json
.github/workflows/: ci.yml  harvest.yml  release.yml
context/: 01-project-overview.md  02-roadmap-summary.md  03-current-focus.md  context-index.md
npm-wrapper/: README.md  install.js  package.json
problems.d/: README.md
pypi-wrapper/: pyproject.toml
pypi-wrapper/dep_doctor/: __init__.py  _runner.py
src/: lib.rs  main.rs
src/cli/: args.rs
src/cli/commands/: mod.rs  problems.rs  scan.rs
src/deep_scan/: context_extractor.rs  file_walker.rs  mod.rs  pattern_matcher.rs
src/feed/: cache.rs  fetcher.rs  mod.rs
src/fetcher/: cache.rs  converter.rs  mod.rs  osv.rs
src/fixer/: cargo.rs  go.rs  mod.rs  npm.rs  pip.rs
src/harvest/: mod.rs  packages.rs  runner.rs
src/llm/: cache.rs  client.rs  mod.rs  prompt.rs  quality.rs
src/problems/: mod.rs  registry.rs  schema.rs
src/problems/builtin/: cargo_rustls_mitm.rs  mod.rs  npm_axios_csrf.rs  npm_lodash_prototype.rs  pip_requests_ssrf.rs
src/reporter/: console.rs  json.rs  markdown.rs  mod.rs
src/scanner/: mod.rs  repo_finder.rs  version_matcher.rs
src/scanner/manifest/: cargo.rs  go.rs  mod.rs  npm.rs  pip.rs
src/supply_chain/: mod.rs  typosquat.rs
src/utils/: fs.rs  logger.rs  mod.rs  semver_utils.rs
src/watcher/: mod.rs
tests/fixtures/npm-axios-fixed/: package.json
tests/fixtures/npm-axios-vuln/: package.json
tests/fixtures/npm-axios-vuln/src/: server.js
tests/fixtures/python-requests/: requirements.txt
tests/fixtures/python-requests/src/: client.py
tests/integration/: scan_test.rs
