[package]
name = "dep-doctor"
version = "0.1.0"
edition = "2021"
description = "Scan repos for known dependency problems and find affected source files"
license = "MIT"
repository = "https://github.com/SpongeBUG/dep-doctor"
keywords = ["security", "dependencies", "audit", "scanner"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dep-doctor"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration/scan_test.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
regex = "1"
walkdir = "2"
ignore = "0.4"
anyhow = "1"
thiserror = "1"
colored = "2"
indicatif = "0.17"
rayon = "1"
glob = "0.3"
ureq = "2"
dirs = "5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
